--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,3 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #F2E3EC;
+  scroll-behavior: smooth; 
+}
